--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "bevy_game" # ToDo
+name = "infini_jump"
 version = "0.1.0"
 publish = false
-authors = ["Nicolas Frey <nicolas.theo.frey@gmail.com>"] # ToDo: you are the author ;)
+authors = ["Nicolas Frey <nicolas.theo.frey@gmail.com>"]
 edition = "2021"
 exclude = ["dist", "build", "assets", "credits"]
 
@@ -60,6 +60,8 @@ bevy_kira_audio = { version = "0.18" }
 bevy_asset_loader = { version = "0.19" }
 rand = { version = "0.8.3" }
 webbrowser = { version = "0.8", features = ["hardened"] }
+bevy_ecs_tilemap = "0.12.0"
+
 
 # keep the following in sync with Bevy's dependencies
 winit = { version = "0.28.7", default-features = false }
