--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,9 +59,9 @@ bevy = { version = "0.12", default-features = false, features = [
 bevy_kira_audio = { version = "0.18" }
 bevy_asset_loader = { version = "0.19" }
 rand = { version = "0.8.3" }
+bevy_pancam = "0.10"
+noise = "0.8.2"
 webbrowser = { version = "0.8", features = ["hardened"] }
-bevy_ecs_tilemap = "0.12.0"
-
 
 # keep the following in sync with Bevy's dependencies
 winit = { version = "0.28.7", default-features = false }
